# New_FullV

New_FullV/: CMakeLists.txt  package.xml
New_FullV/config/: ekf.yaml  joint_names_New_FullV.yaml
New_FullV/launch/: NewFullV_gmapping.launch  NewFullV_navigation.launch  NewFullV_slam.launch  display.launch  gazebo.launch  khara.launch  launch.launch  motors_encoders.launch  move_base.launch
New_FullV/meshes/: BL_Caster.STL  FR_Caster.STL  IMU.STL  Kinect.STL  Left_Wheel.STL  Right_Wheel.STL  base_link.STL
New_FullV/meshes/col_meshes/: BRCaster_col.STL  FLCaster_col.STL  FRCaster_col.STL  IMU_col.STL  Kinect_col.STL  LeftWheel_col.STL  RightWheel_col.STL  base_link_col.STL
New_FullV/param/: imu.yaml
New_FullV/src/: New_FullV_tf_publisher.py  imu_3_parts.cpp  imu_string_listener.py  mpu6050_serial_to_imu_node2.cpp  ticks_to_odom.cpp  zmex.py
New_FullV/src/PI_controller/: PI_controller.ino
New_FullV/src/PI_controller2/: PI_controller2.ino
New_FullV/src/encoder_bedo/: encoder_bedo.ino
New_FullV/src/encoder_bedo2/: encoder_bedo2.ino
New_FullV/src/imu_3_parts/: imu_3_parts.ino
New_FullV/src/send_ticks/: send_ticks.ino
New_FullV/src/test_IMU/: test_IMU.ino
New_FullV/src/test_esp_imu_encoder/: test_esp_imu_encoder.ino
New_FullV/src/test_motors/: test_motors.ino
New_FullV/src/testawy/: testawy.ino
New_FullV/urdf/: New_FullV.config  New_FullV.csv  New_FullV.urdf
New_FullV/urdf/xml/: 1_Default_sldprt.STEP  25ga-370-280-rpm-dc Motor.stp_Default_sldprt.STEP  4_Default_sldprt.STEP  Base_Default_sldprt.STEP  Holder Door_Default_sldprt.STEP  Holder_Default_sldprt.STEP  IGVC Wheel_Default_sldprt.STEP  New.xml  Part1_Default_sldprt.STEP  Part3_Default_sldprt.STEP  Part4_Default_sldprt.STEP  Resistor black_Default_sldprt.STEP  Resistor small black_Default_sldprt.STEP  Resistor small_Default_sldprt.STEP  S2NH chip_Default_sldprt.STEP  Small LED_Default_sldprt.STEP  V-Slot 100mm_Default_sldprt.STEP  V-Slot 150 mm_Default_sldprt.STEP  V-Slot 260mm_Default_sldprt.STEP  V-Slot 50mm_Default_sldprt.STEP  battery_Default_sldprt.STEP  casterball_Default_sldprt.STEP  cover 138 288_Default_sldprt.STEP  cover 331 400_Default_sldprt.STEP  incoder_Default_sldprt.STEP  pin header_Default_sldprt.STEP  sensor chip_Default_sldprt.STEP  wheel ball_Default_sldprt.STEP
